--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                                 <div class="thumbnail">
                                     <img src="img/producto002.jpg" alt="">
                                     <div class="caption">
-                                        <h4 class="pull-right">384,99â‚¬</h4>
+                                        <h4 class="pull-right">384,99&#8364;</h4>
                                         <h4><a href="#">Advice Services</a></h4>
                                         <p>We are leaders in sports and fitness advice. Contact us without obligation.</p>
                                     </div>
@@ -430,7 +430,7 @@
                                 <div class="thumbnail">
                                     <img src="img/producto004.jpg" alt="">
                                     <div class="caption">
-                                        <h4 class="pull-right">234.99â‚¬</h4>
+                                        <h4 class="pull-right">234.99&#8364;</h4>
                                         <h4><a href="#">Employment</a></h4>
                                         <p>We will provide qualified personnel to develop the sport activities that you propose. Do not hesitate to contact us.</p>
                                     </div>
